--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
 </head>
 <body>
     <div id="header">
-        <h1>Meu Currículo</h1>
+        <h1>Currículo</h1>
     </div>
     <div id="main-content">
         <h2>Dados Pessoais</h2>
-        <img id="profile-image" src="gabriel" alt="Foto de Perfil">
-        <p>Nome: Seu Nome</p>
-        <p>E-mail: seuemail@example.com</p>
-        <p>Telefone: (123) 456-7890</p>
+        <img id="profile-image" src="gabriel.jpg" alt="Foto de Perfil">
+        <p>Nome: Gabriel dos Santos Steimbach</p>
+        <p>E-mail: steimbachgabriel@gmail.com</p>
+        <p>Telefone: (048) 99636-1739</p>
 
         <h2>Experiência Profissional</h2>
-        <p>Cargo: Nome do Cargo</p>
-        <p>Empresa: Nome da Empresa</p>
-        <p>Descrição: Descrição das responsabilidades e realizações no cargo.</p>
+        <p>Cargo: Analista de Marketing</p>
+        <p>Empresa: Qualipeças</p>
+        <p>Descrição: Análise de mercado, criação de arte e edição de fotos, e-mail marketing, e-commerce, mídias pagas entre outras atividades correlatas.</p>
 
         <h2>Formação Acadêmica</h2>
-        <p>Curso: Nome do Curso</p>
-        <p>Instituição: Nome da Instituição</p>
-        <p>Ano de Conclusão: 20XX</p>
+        <p>Curso: Técnologia em Produção Multimídia Bilíngue</p>
+        <p>Instituição: IFSC Palhoça</p>
+        <p>Ano de Conclusão: 2017</p>
     </div>
 </body>
 </html>
